[gd_scene load_steps=2 format=3 uid="uid://tc3ps3hbo7d"]

[ext_resource type="Script" path="res://Menu/PauseCanvas.gd" id="1_6rsrs"]

[node name="PauseCanvas" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_6rsrs")

[node name="darkBackground" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.352941)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="save" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
